# ImpossiblyFastEventCPP17

./: .gitignore  CMakeLists.txt  IFEConfig.cmake.in  README.md  event_vector.hpp  main.cpp
Benchmark/: CMakeLists.txt
Benchmark/include/: BenchEventVsCall.h  Test.h
Benchmark/src/: main.cpp
IFE/: CMakeLists.txt
IFE/include/ife/: event.hpp
IFE/include/ife/vec/: event.hpp
